--- a/Index.html
+++ b/Index.html
@@ -68,7 +68,7 @@
                                     <img src="./images/profile-2.jpg">
                                 </div>
                                 <div class="notification-body">
-                                    <b>Keke Benjamin</b> accepted your friend request
+                                    <b>Beyonce Knowles</b> accepted your friend request
                                     <small class="text-muted">2 DAYS AGO</small>
                                 </div>
                             </div>
@@ -77,7 +77,7 @@
                                     <img src="./images/profile-3.jpg">
                                 </div>
                                 <div class="notification-body">
-                                    <b>John Doe</b> commented on your post
+                                    <b>Michael Jordan</b> commented on your post
                                     <small class="text-muted">1 HOUR AGO</small>
                                 </div>
                             </div>
@@ -86,7 +86,7 @@
                                     <img src="./images/profile-4.jpg">
                                 </div>
                                 <div class="notification-body">
-                                    <b>Mary Oppong</b> and <b>283 others </b> liked your post
+                                    <b>Amira Ahmed</b> and <b>387 others </b> liked your post
                                     <small class="text-muted">4 MINUTES AGO</small>
                                 </div>
                             </div>
@@ -95,7 +95,7 @@
                                     <img src="./images/profile-5.jpg">
                                 </div>
                                 <div class="notification-body">
-                                    <b>Doris Y. Lartey</b> commented on a post you are tagged in
+                                    <b>Dorina Swift</b> commented on a post you are tagged in
                                     <small class="text-muted">2 DAYS AGO</small>
                                 </div>
                             </div>
@@ -104,8 +104,8 @@
                                     <img src="./images/profile-6.jpg">
                                 </div>
                                 <div class="notification-body">
-                                    <b>Donald Trump</b> commented on a post you are tagged in
-                                    <small class="text-muted">1 HOUR AGO</small>
+                                    <b>David Neilson</b> commented on a post you are tagged in
+                                    <small class="text-muted">7 HOUR AGO</small>
                                 </div>
                             </div>
                             <div>
@@ -113,7 +113,7 @@
                                     <img src="./images/profile-7.jpg">
                                 </div>
                                 <div class="notification-body">
-                                    <b>jane Doe</b> commented on your post
+                                    <b>Amal Farah</b> commented on your post
                                     <small class="text-muted">1 HOUR AGO</small>
                                 </div>
                             </div>
@@ -157,13 +157,13 @@
                         <div class="profile-photo">
                             <img src="./images/profile-9.jpg">
                         </div>
-                        <p class="name">Lilla James</p>
+                        <p class="name">Onika Maraj</p>
                     </div>
                     <div class="story">
                         <div class="profile-photo">
                             <img src="./images/profile-10.jpg">
                         </div>
-                        <p class="name">Winnie Hale</p>
+                        <p class="name">Khalid Ahmed</p>
                     </div>
                     <div class="story">
                         <div class="profile-photo">
@@ -175,7 +175,7 @@
                         <div class="profile-photo">
                             <img src="./images/profile-12.jpg">
                         </div>
-                        <p class="name">Jane Doe</p>
+                        <p class="name">Idris Elba</p>
                     </div>
                     <div class="story">
                         <div class="profile-photo">
@@ -231,7 +231,7 @@
                             <span><img src="./images/profile-10.jpg"></span>
                             <span><img src="./images/profile-4.jpg"></span>
                             <span><img src="./images/profile-15.jpg"></span>
-                            <p>Liked by <b>Ernest Achiever</b> and <b>2,323 others</b></p>
+                            <p>Liked by <b>Rachel Berry</b> and <b>2,323 others</b></p>
                         </div>
 
                         <div class="caption">
@@ -276,11 +276,11 @@
                             <span><img src="./images/profile-10.jpg"></span>
                             <span><img src="./images/profile-4.jpg"></span>
                             <span><img src="./images/profile-15.jpg"></span>
-                            <p>Liked by <b>Ernest Achiever</b> and <b>2,323 others</b></p>
+                            <p>Liked by <b>Andy Serkis</b> and <b>2,323 others</b></p>
                         </div>
 
                         <div class="caption">
-                            <p><b>khalid</b> Some social engineering tips that are useful #se. <span class="harsh-tag">#lifestyle</span></p>
+                            <p><b>khalid</b> Some social engineering tips that are useful #se. <span class="harsh-tag">#Knowledge</span></p>
                         </div>
                         <div class="comments text-muted">View all 3,473 comments</div>
                     </div>
@@ -321,13 +321,13 @@
                             <span><img src="./images/profile-10.jpg"></span>
                             <span><img src="./images/profile-4.jpg"></span>
                             <span><img src="./images/profile-15.jpg"></span>
-                            <p>Liked by <b>Ernest Achiever</b> and <b>2,323 others</b></p>
+                            <p>Liked by <b>Tarik Ali</b> and <b>4,323 others</b></p>
                         </div>
 
                         <div class="caption">
                             <p><b>Lana James</b> social engineering tips . <span class="harsh-tag">#lifestyle</span></p>
                         </div>
-                        <div class="comments text-muted">View all 277 comments</div>
+                        <div class="comments text-muted">View all 444 comments</div>
                     </div>
                     <!---------------- END OF FEED ----------------->
                     <!------------------- FEED 4 --------------------->
@@ -366,13 +366,13 @@
                             <span><img src="./images/profile-10.jpg"></span>
                             <span><img src="./images/profile-4.jpg"></span>
                             <span><img src="./images/profile-15.jpg"></span>
-                            <p>Liked by <b>Ernest Achiever</b> and <b>2,323 others</b></p>
+                            <p>Liked by <b>Ollie William</b> and <b>5,124 others</b></p>
                         </div>
 
                         <div class="caption">
                             <p><b>Barclays</b> Stop and Think before taking Action. <span class="harsh-tag">#Barclays</span></p>
                         </div>
-                        <div class="comments text-muted">View all 277 comments</div>
+                        <div class="comments text-muted">View all 170 comments</div>
                     </div>
                     <!---------------- END OF FEED ----------------->
                     <!------------------- FEED 5 --------------------->
@@ -411,13 +411,13 @@
                             <span><img src="./images/profile-10.jpg"></span>
                             <span><img src="./images/profile-4.jpg"></span>
                             <span><img src="./images/profile-15.jpg"></span>
-                            <p>Liked by <b>Ernest Achiever</b> and <b>2,323 others</b></p>
+                            <p>Liked by <b>Hakeem Farouk</b> and <b>1,723 others</b></p>
                         </div>
 
                         <div class="caption">
                             <p><b>Barclays</b> What to look out for in emails. <span class="harsh-tag">#socialengineering</span></p>
                         </div>
-                        <div class="comments text-muted">View all 277 comments</div>
+                        <div class="comments text-muted">View all 372 comments</div>
                     </div>
                     <!---------------- END OF FEED ----------------->
                     <!------------------- FEED 6 --------------------->
@@ -456,13 +456,13 @@
                             <span><img src="./images/profile-10.jpg"></span>
                             <span><img src="./images/profile-4.jpg"></span>
                             <span><img src="./images/profile-15.jpg"></span>
-                            <p>Liked by <b>Ernest Achiever</b> and <b>2,323 others</b></p>
+                            <p>Liked by <b>Hodan Farah</b> and <b>2,313 others</b></p>
                         </div>
 
                         <div class="caption">
                             <p><b>Sarah Mei</b> Creating a new game for businesses to learn about phishing attempts. <span class="harsh-tag">#phishing</span></p>
                         </div>
-                        <div class="comments text-muted">View all 277 comments</div>
+                        <div class="comments text-muted">View all 211 comments</div>
                     </div>
                     <!---------------- END OF FEED ----------------->
                     <!------------------- FEED 7 --------------------->
@@ -501,13 +501,13 @@
                             <span><img src="./images/profile-10.jpg"></span>
                             <span><img src="./images/profile-4.jpg"></span>
                             <span><img src="./images/profile-15.jpg"></span>
-                            <p>Liked by <b>Ernest Achiever</b> and <b>2,323 others</b></p>
+                            <p>Liked by <b>Clifford Sule</b> and <b>4,623 others</b></p>
                         </div>
 
                         <div class="caption">
                             <p><b>Ahmed Jama</b> Been a year since i've started my cyber security analyst position, and ive already learnt a lot about the importance of changing passwords. <span class="harsh-tag">#passwords #socialengineering</span></p>
                         </div>
-                        <div class="comments text-muted">View all 277 comments</div>
+                        <div class="comments text-muted">View all 977 comments</div>
                     </div>
                     <!---------------- END OF FEED ----------------->
                 </div>
@@ -551,7 +551,7 @@
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
-                            <h5>Franca Deila</h5>
+                            <h5>Delia Kothar</h5>
                             <p class="text-bold">Very interesting facts. Thanks!</p>
                         </div>
                     </div>
@@ -561,7 +561,7 @@
                             <img src="./images/profile-4.jpg">
                         </div>
                         <div class="message-body">
-                            <h5>Jane Doe</h5>
+                            <h5>Ariana Grande</h5>
                             <p class="text-bold">when is the training starting? Thanks</p>
                         </div>
                     </div>
@@ -581,7 +581,7 @@
                             <img src="./images/profile-6.jpg">
                         </div>
                         <div class="message-body">
-                            <h5>Juliet Makarey</h5>
+                            <h5>Julie Evans</h5>
                             <p class="text-muted">When is the cyber security Event </p>
                         </div>
                     </div>
@@ -592,7 +592,7 @@
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
-                            <h5>Chantel Msiza</h5>
+                            <h5>Chantel Casey</h5>
                             <p class="text-bold">There is this cool SE game for helping tackle SE</p>
                         </div>
                     </div>
@@ -610,8 +610,8 @@
                                 <img src="./images/profile-8.jpg">
                             </div>
                             <div>
-                                <h5>Hajia Bintu</h5>
-                                <p class="text-muted">8 mutual friends</p>
+                                <h5>Ibrahim Haji</h5>
+                                <p class="text-muted">12 mutual friends</p>
                             </div>
                         </div>
                         <div class="action">
@@ -642,8 +642,8 @@
                                 <img src="./images/profile-10.jpg">
                             </div>
                             <div>
-                                <h5>Jennifer Lawrence</h5>
-                                <p class="text-muted">19 mutual friends</p>
+                                <h5>Khadija Mohamed</h5>
+                                <p class="text-muted">23 mutual friends</p>
                             </div>
                         </div>
                         <div class="action">
@@ -698,15 +698,15 @@
             <div class="choose-bg">
                 <div class="bg-1 active">
                     <span></span>
-                    <h5 for="bg-1">Light</h5>
+                    <h5 for="bg-1">Light Mode</h5>
                 </div>
                 <div class="bg-2">
                     <span></span>
-                    <h5>Dim</h5>
+                    <h5>Dim Mode</h5>
                 </div>
                 <div class="bg-3">
                     <span></span>
-                    <h5 for="bg-3">Lights Out</h5>
+                    <h5 for="bg-3">Dark Mode</h5>
                 </div>
             </div>
         </div>
@@ -716,3 +716,4 @@
 <script src="./index.js"></script>
 </body>
 </html>
+            
